Register QAbstractItemModel in QtQml.Models

So that users can assign to QAbstractItemModel* properties in QML.

Pick-to: 5.15
Change-Id: Ifba0da3d777ec47f53b257c39468ed3f5785d40f
Fixes: QTBUG-86428
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>